# dali

./: CHANGELOG  Cargo.toml  README.md  go.mod  go.sum  main.go
internal/dali/: config.go  dali.go  discovery.go  identity.go  message.go  network.go  transfer.go  update.go  utils.go
internal/discovery/: discovery.go
internal/protocol/: protocol.go
internal/transfer/: transfer.go
src/: discovery.rs  main.rs  protocol.rs  transfer.rs
