[package]
name = "dali"
version = "0.1.0"
edition = "2021"
description = "P2P local network file sharing tool"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
local-ip-address = "0.6"
hostname = "0.4"
